# files

./: .gitignore  Cargo.toml  README.md  org.kavanmevada.Files.desktop  org.kavanmevada.Files.metainfo.xml  org.kavanmevada.Files.service  org.kavanmevada.Files.yml  stylesheet.css
.github/workflows/: push.yml
.rpm/: files.spec
src/: application.rs  browser-view.rs  browser-view.ui  main.rs  process-item-view.rs  process-item-view.ui  process-popover.rs  progress-info-model.rs  stack-button.rs  utilities.rs  window.rs  window.ui
